# TEDISC-Dagster

./: .dockerignore  .gitignore  Dockerfile_dagster  Dockerfile_user_code  README.md  dagster.yaml  dagster.yaml.example  dagster.yaml.tmpl  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  workflow.py  workspace.yaml
.github/workflows/: docker-build.yml  security-audit.yml
Random scripts/: claudes_bla_datatype_assets.py
cc/: Dockerfile.dagster  Dockerfile.user-code  README.md  dagster.yaml  docker-compose.yml  workspace.yaml
cc/user_code/defs/: __init__.py
my_dagster_project/: __init__.py  definitions.py  jobs.py  schedules.py  sensors.py
my_dagster_project/defs/: assets.py  constants.py  jobs.py  resources.py  schedules.py  sensors.py  utils.py
scripts/: deploy-update.sh  tedisc-deploy.service  tedisc-deploy.timer  tedisc.service
src/my_dagster_project/defs/: assets.py  resources.py
tedisc_dagster/: __init__.py  definitions.py
tedisc_dagster/defs/: assets.py  constants.py  jobs.py  resources.py  schedules.py  sensors.py  utils.py
tedisc_dagster/defs/assets/: BirdLife.py  __init__.py  iNaturalist.py
