[project]
name = "my-dagster-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.22",
    "dagster-webserver>=1.12.22",
    "httpx>=0.28.1",
    "pyodbc>=5.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.dagster]
module_name = "my_dagster_project"
