[project]
name = "tedisc-dagster"
version = "0.1.0"
description = "Dagster deployment for the TEDISC project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.22",
    "dagster-webserver>=1.12.22",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "pyodbc>=5.3.0",
    "pyinaturalist",
    "python-dotenv>=1.2.2",
    "dagster-mssql-bcp>=0.1.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.dagster]
module_name = "tedisc_dagster"
